Fixes modal overflow bug

--- a/css/src/elementor.css
+++ b/css/src/elementor.css
@@ -127,30 +127,6 @@ input[type="radio"]:checked::before {
 	background-color: #fff;
 }
 
-/* Upsell modal close-button tooltips */
-.yoast-gutenberg-modal {
-	overflow: visible;
-}
-
-.yoast-gutenberg-modal .components-modal__header .components-button {
-	overflow: visible;
-}
-
-.yoast-gutenberg-modal .components-modal__header .components-button > span {
-	width: 0;
-	height: 0;
-}
-
-.yoast-gutenberg-modal .components-modal__header .components-button .components-tooltip {
-	position: absolute;
-	top: 0 !important;
-	left: 20px !important;
-}
-
-.yoast-gutenberg-modal .components-modal__header .components-tooltip::before, .yoast-gutenberg-modal .components-modal__header .components-tooltip::after {
-	top: 0;
-}
-
 /* Tab-focus styling */
 .yoast div:focus {
 	outline: 0;
